# JEAD

./: .gitattributes  .gitignore  README.md  compose.test.yml  pom.xml
AiDetector/: .gitignore  requirements.txt  run_tests.py
AiDetector/inference-server/: Dockerfile  compose.cpu.yaml  compose.gpu.yaml  compose.yaml  pyproject.toml  setup.py
AiDetector/inference-server/docs/: future-arch-sketch.excalidraw  inference-server.mermaid
AiDetector/inference-server/scripts/: generate-server.sh  install.sh
AiDetector/inference-server/src/inference_server/: main.py
AiDetector/inference-server/src/inference_server/business/: inference_service.py  model_storage.py
AiDetector/inference-server/src/inference_server/configuration/: config.py  logging.py
AiDetector/inference-server/src/inference_server/exception/: __init__.py  model.py
AiDetector/inference-server/src/inference_server/grpc_service/: inference_port.py
AiDetector/inference-server/src/inference_server/ml_models/: __init__.py  comments_model.py  god_di_model.py  inference_model.py  multiservice_model.py
AiDetector/inference-server/src/inference_server/model/: inference_model.py  validation.py
AiDetector/inference-server/src/inference_server/model/mapping/: inference_model.py
AiDetector/inference-server/src/inference_server/server/: exception_handler.py  grpc_server.py
AiDetector/inference-server/src/inference_server/service/: inference_service.py
AiDetector/inference-server/src/inference_server/util/: onnx_util.py
AiDetector/inference-server/tests/inference_service/: test_inference_service.py
AiDetector/inference-server/tests/integration/: test_model_inference.py  test_model_ready.py  test_server_ready.py
AiDetector/inference-server/tests/model_storage/: test_model_definition.py  test_model_storage.py
AiDetector/training/: pyproject.toml
AiDetector/training/src/pipelines/: comments.ipynb  god-di.ipynb  multi-service.ipynb
AiDetector/training/src/pipelines/comments/: llm_labeling.py  prompts.py  static_labeling.py
AiDetector/training/src/pipelines/god_di/com_dataset/: com_parser.py  labeling.py
AiDetector/training/src/pipelines/multi_service/: gap_statistic.py  mean_pooling.py
AiDetector/training/src/pipelines/shared/: __init__.py  differences.py  exception.py  llm_connector.py  manual_labeling.py  notebooks.py  rules_labeling.py  sampling.py  string_utils.py  utils.py
AiDetector/training/tests/deduplicate/: test_json_deduplicate.py
AiDetector/training/tests/labeling/: test_static_code_labeling.py
AiDetector/training/tests/string_utils/: test_camel_case.py
ai-detector/: .gitignore  run_tests.py
ai-detector/github-miner/: pyproject.toml
assembly/: pom.xml
build-plugins/: pom.xml
(+457 files in other folders)
