[project]
name = "jena-v3-aidetector-training"
version = "0.1.0"
description = ""
authors = [
    { name = "Martin Prochazka", email = "567781@mail.muni.cz" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ollama (==0.5.3)",
    "numpy (==2.3.2)",
    "dotenv (==0.9.9)",
    "openai (==1.107.0)",
    "datasets (==4.0.0)",
    "transformers (==4.55.2)",
    "evaluate (==0.4.6)",
    "scikit-learn (==1.7.2)",
    "accelerate (==1.10.1)",
    "torch (==2.8.0)",
    "plt (>=0.2.0,<0.3.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
]

[dependency-groups]
dev = [
    "ruff (==0.13.2)"
]

run = [
    "optimum[onnxruntime] (>=2.0.0,<3.0.0)",
    "skl2onnx (>=1.19.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "pipelines", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
#test = "unittest:python -m unittest discover -s tests -p 'test_*.py' -v"
test = "unittest:main"