[project]
name = "github-miner"
version = "0.1.0"
description = ""
authors = [
    {name = "Martin Prochazka",email = "pro.nitram@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygithub (>=2.8.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gitpython (>=3.1.45,<4.0.0)"
]

[dependency-groups]
dev = [
    "ruff (==0.13.2)"
]

[tool.poetry]
packages = [{include = "github_miner", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
